[gd_scene load_steps=12 format=3 uid="uid://dfj2fmtcghdyw"]

[ext_resource type="Script" path="res://Escenas/Niveles/nivel_5.gd" id="1_32guu"]
[ext_resource type="PackedScene" uid="uid://6tsdj31d52xt" path="res://Escenas/carteles/victoria.tscn" id="1_untnp"]
[ext_resource type="PackedScene" uid="uid://2ds52qtg13pp" path="res://Escenas/carteles/derota.tscn" id="2_fohoj"]
[ext_resource type="PackedScene" uid="uid://b3f5uesdnb1oh" path="res://Escenas/Burbuja/burbuja.tscn" id="2_po4x1"]
[ext_resource type="Texture2D" uid="uid://qfg1qkintpch" path="res://Sprite/fondos/fondo2025.png" id="2_xe33o"]
[ext_resource type="AudioStream" uid="uid://b8wti220iewdq" path="res://sonidos/pantallaprincipal.mp3" id="5_06km3"]
[ext_resource type="PackedScene" uid="uid://c0exydsu1f8qw" path="res://Escenas/objetos/habilidad/escudo/escudo.tscn" id="6_bwrfu"]
[ext_resource type="Texture2D" uid="uid://cqe4lcpqo88e7" path="res://Sprite/fondo.png" id="7_clnlf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_76y78"]
size = Vector2(70, 1368)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pfqyp"]
size = Vector2(64, 1267)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g1vr5"]
size = Vector2(1415, 53.5)

[node name="nivel_5" type="Node2D"]
script = ExtResource("1_32guu")

[node name="Fondo2025" type="Sprite2D" parent="."]
modulate = Color(0.270638, 0.259969, 0.632392, 1)
position = Vector2(634, 359)
scale = Vector2(1.08, 1.08)
texture = ExtResource("2_xe33o")

[node name="tiempoSpawn" type="Timer" parent="."]

[node name="instanObj" type="Node2D" parent="."]
position = Vector2(73, -187)

[node name="Der" type="Marker2D" parent="instanObj"]
position = Vector2(1100, 0)

[node name="Izq" type="Marker2D" parent="instanObj"]

[node name="bordes" type="Node2D" parent="."]

[node name="der" type="StaticBody2D" parent="bordes"]
position = Vector2(1156, -2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="bordes/der"]
position = Vector2(160, 86)
shape = SubResource("RectangleShape2D_76y78")

[node name="izq" type="StaticBody2D" parent="bordes"]
position = Vector2(-43, 6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="bordes/izq"]
position = Vector2(16, 145.5)
shape = SubResource("RectangleShape2D_pfqyp")

[node name="abajo" type="StaticBody2D" parent="bordes"]
position = Vector2(-43, 6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="bordes/abajo"]
position = Vector2(708, 740)
shape = SubResource("RectangleShape2D_g1vr5")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(620, 336)

[node name="Burbuja" parent="." instance=ExtResource("2_po4x1")]
position = Vector2(603, 623)

[node name="viento" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[node name="detenerViento" type="Timer" parent="."]

[node name="temporizador" type="Timer" parent="."]

[node name="textTiempo" type="Label" parent="."]
offset_left = 568.0
offset_top = 30.0
offset_right = 725.0
offset_bottom = 62.0
theme_override_colors/font_color = Color(0, 0, 0, 0.937255)
theme_override_font_sizes/font_size = 23
text = "tiempo"

[node name="victoria" parent="." instance=ExtResource("1_untnp")]

[node name="derota" parent="." instance=ExtResource("2_fohoj")]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_06km3")
volume_db = -30.0
pitch_scale = 0.66

[node name="escudo" parent="." instance=ExtResource("6_bwrfu")]
position = Vector2(904, -120)

[node name="escudo2" parent="." instance=ExtResource("6_bwrfu")]
position = Vector2(228, -4381)

[node name="telonOscuro" type="Sprite2D" parent="."]
position = Vector2(648.625, 363.25)
scale = Vector2(1.25777, 1.26396)
texture = ExtResource("7_clnlf")

[connection signal="timeout" from="tiempoSpawn" to="." method="_on_tiempo_spawn_timeout"]
[connection signal="timeout" from="viento" to="." method="_on_viento_timeout"]
[connection signal="timeout" from="detenerViento" to="." method="_on_detener_viento_timeout"]
[connection signal="timeout" from="temporizador" to="." method="_on_temporizador_timeout"]
